<resources>
    <string name="app_name">Agenda-GraphModel</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t yet have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="an_account">Already have an account?</string>
    <string name="accont">Accont</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="graph">Graph</string>
    <string name="hello">Hello, Essi Junior</string>
    <string name="recommended_food">Recommended food</string>
    <string name="foods_eaten">Foods eaten</string>
</resources>