<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_back"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#7A6B0079">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="94sp"
            android:layout_height="116sp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/entries_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ExtraText">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text"
                    android:background="#4DD9D9D9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:background="#4DD9D9D9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/login"
                app:backgroundTint="@color/orange" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="200dp">

                <TextView
                    android:id="@+id/navigate_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/no_account"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/sign_up"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/navigate_hint"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>